# api/openapi.yaml
@@ -17,13 +17,13 @@ tags:
   - name: Test Endpoints
   - name: Health
 
-
 paths:
   /addresses/validate:
     post:
       tags:
         - Addresses
       summary: Validate an address with the USPS address validation service
+      operationId: opr_api.controllers.address
       responses:
         "200":
           $ref: "#/components/responses/AddressValidationResponse"
@@ -37,6 +37,7 @@ paths:
       tags:
         - Applications
       summary: Start and persist a passport RENEWAL (DS-82) application
+      operationId: opr_api.controllers.application.renewal
       responses:
         "200":
           $ref: "#/components/responses/RenewalApplicationResponse"
@@ -50,6 +51,7 @@ paths:
       tags:
         - Applications
       summary: Submit a photo for validation and persist if successful
+      operationId: opr_api.controllers.application.photo
       parameters:
         - name: app_id
           in: path
@@ -70,6 +72,7 @@ paths:
     post:
       tags:
         - Eligibility
+      operationId: opr_api.controllers.eligibility
       summary: Verify eligibility for online passport renewal
       responses:
         "200":
@@ -87,34 +90,8 @@ paths:
       operationId: opr_api.controllers.health
       responses:
         "200":
-          description: API is available
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - status
-                  - timestamp
-                  - apiName
-                  - apiVersion
-                properties:
-                  status:
-                    type: string
-                    example: up
-                    nullable: false
-                  timestamp:
-                    type: string
-                    format: date-time
-                    nullable: false
-                    example: "2023-06-26T01:02:03.967736+00:00"
-                  apiName:
-                    type: string
-                    nullable: false
-                    example: opr-api
-                  apiVersion:
-                    type: string
-                    nullable: false
-                    example: v1
+          $ref: "#/components/responses/HealthResponse"
+
   /health/deep:
     get:
       summary: More extensive health check for the OPR API
@@ -123,50 +100,14 @@ paths:
       operationId: opr_api.controllers.health_deep
       responses:
         "200":
-          description: Validates that the API is available and connected to the database
-          content:
-            application/json:
-              schema:
-                type: object
-                required:
-                  - status
-                  - timestamp
-                  - apiName
-                  - apiVersion
-                  - components
-                properties:
-                  status:
-                    type: string
-                    example: up
-                    nullable: false
-                  timestamp:
-                    type: string
-                    format: date-time
-                    nullable: false
-                    example: "2023-06-26T01:02:03.967736+00:00"
-                  apiName:
-                    type: string
-                    nullable: false
-                    example: opr-api
-                  apiVersion:
-                    type: string
-                    nullable: false
-                    example: v1
-                  components:
-                    type: object
-                    properties:
-                      db:
-                        type: object
-                        properties:
-                          status:
-                            type: string
-                            example: up
+          $ref: "#/components/responses/HealthResponseDeep"
 
   /payment:
     post:
       tags:
         - Payments
       summary: Process a payment
+      operationId: opr_api.controllers.pay
       responses:
         "200":
           $ref: "#/components/responses/PaymentProcessedResponse"
@@ -176,11 +117,88 @@ paths:
         $ref: "#/components/requestBodies/PaymentProcessedRequest"
 
 components:
-
   #
   # RESPONSES
   #
   responses:
+    HealthResponse:
+      description: Status check that the API is
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/SuccessfulResponse"
+              - properties:
+                  data:
+                    type: object
+                    required:
+                      - status
+                      - timestamp
+                      - apiName
+                      - apiVersion
+                    properties:
+                      status:
+                        type: string
+                        example: up
+                        nullable: false
+                      timestamp:
+                        type: string
+                        format: date-time
+                        nullable: false
+                        example: "2023-06-26T01:02:03.967736+00:00"
+                      apiName:
+                        type: string
+                        nullable: false
+                        example: opr-api
+                      apiVersion:
+                        type: string
+                        nullable: false
+                        example: v1
+
+    HealthResponseDeep:
+      description: Validates that the API is available and connected to the database
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/SuccessfulResponse"
+              - properties:
+                  data:
+                    type: object
+                    required:
+                      - status
+                      - timestamp
+                      - apiName
+                      - apiVersion
+                      - components
+                    properties:
+                      status:
+                        type: string
+                        example: up
+                        nullable: false
+                      timestamp:
+                        type: string
+                        format: date-time
+                        nullable: false
+                        example: "2023-06-26T01:02:03.967736+00:00"
+                      apiName:
+                        type: string
+                        nullable: false
+                        example: opr-api
+                      apiVersion:
+                        type: string
+                        nullable: false
+                        example: v1
+                      components:
+                        type: object
+                        properties:
+                          db:
+                            type: object
+                            properties:
+                              status:
+                                type: string
+                                example: up
+
     EligibilityCheckResponse:
       description: Translated reply from external Eligiblity Service
       content:
@@ -191,6 +209,12 @@ components:
               - properties:
                   data:
                     $ref: "#/components/schemas/EligibilityCheckResponseData"
+          example:
+            statusCode: 200
+            message: ""
+            data:
+              isEligible: True
+            warnings: []
 
     AddressValidationResponse:
       description: Translated reply from USPS Address Validation Service
@@ -202,6 +226,16 @@ components:
               - properties:
                   data:
                     $ref: "#/components/schemas/AddressValidationResponseData"
+          example:
+            statusCode: 200
+            message: ""
+            data:
+              matches: true
+              supplied:
+                $ref: "#/components/examples/exampleAddress"
+              suggested:
+                $ref: "#/components/examples/exampleAddress"
+            warnings: []
 
     RenewalApplicationResponse:
       description: Newly-created OPR application w/ some masked sensitive fields
@@ -213,6 +247,33 @@ components:
               - properties:
                   data:
                     $ref: "#/components/schemas/RenewalApplicationResponseData"
+          example:
+            statusCode: 200
+            message: ""
+            data:
+              application:
+                id: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+                applicationType: "renewal"
+                applicant:
+                  first: "Ringo"
+                  middle: "Beatle"
+                  last: "Starr"
+                  dob: "1970-07-07"
+                  gender: "m"
+                  placeOfBirth: "England"
+                  primaryAddress:
+                    $ref: "#/components/examples/exampleAddress"
+                  alternateNames: []
+                phone:
+                  phoneNumber: "***-***-1234"
+                heightFt: 5
+                heightIn: 11
+                occupation: "Rock Star"
+              status:
+                applicationId: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+                currentStatus: "in_progress"
+                datetimeStarted: "2024-05-08T12:34:56.789789+00:00"
+            warnings: []
 
     PersistPhotoResponse:
       description: Photo errors if rejected by external Photo Quality Service OR metadata about persisted photo
@@ -224,6 +285,16 @@ components:
               - properties:
                   data:
                     $ref: "#/components/schemas/PersistPhotoResponseData"
+          example:
+            statusCode: 200
+            message: ""
+            data:
+              applicationId: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+              datetimeUploaded: "2024-05-08T12:34:56.789789+00:00"
+              storageId: "abc-123-efg"
+              status:
+                isValid: true
+            warnings: []
 
     PaymentProcessedResponse:
       description: Payment processing info w/ data specific to payment processors
@@ -235,6 +306,14 @@ components:
               - properties:
                   data:
                     $ref: "#/components/schemas/PaymentProcessedResponseData"
+          example:
+            statusCode: 200
+            message: ""
+            data:
+              applicationId: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+              datetimeProcessed: "2024-05-08T12:34:56.789789+00:00"
+              processor: "paygov"
+            warnings: []
 
     BadRequest:
       description: There was a problem with your request
@@ -252,18 +331,22 @@ components:
       properties:
         statusCode:
           type: integer
+          example: 200
         message:
           type: string
+          example: "Success"
         meta:
           $ref: "#/components/schemas/Meta"
         data:
           oneOf:
             - type: array
             - type: object
+          example: []
         warnings:
           type: array
           items:
             $ref: "#/components/schemas/ValidationErrorDetail"
+          example: []
       required: ["statusCode"]
       additionalProperties: false
 
@@ -280,6 +363,7 @@ components:
           oneOf:
             - type: array
             - type: object
+          example: []
         warnings:
           type: array
           items:
@@ -296,12 +380,16 @@ components:
       properties:
         resource:
           type: string
+          example: "/v1"
         method:
           type: string
+          example: "GET"
         query:
           type: object
+          nullable: true
         paging:
           type: object
+          nullable: true
           properties:
             pageOffset:
               type: integer
@@ -315,7 +403,7 @@ components:
               type: string
             orderDirection:
               type: string
-      required: ["resource", "method"]
+      required: ["method", "resource"]
       additionalProperties: false
 
     Address:
@@ -323,12 +411,16 @@ components:
       properties:
         address1:
           type: string
+          example: "123 Main St"
         address2:
           type: string
+          example: "Apt 1"
         city:
           type: string
+          example: "Richmond"
         state:
           type: string
+          example: "VA"
           enum:
             - MD
             - VA
@@ -336,8 +428,10 @@ components:
             # TODO: fill in states
         zip:
           type: string
+          example: "00000"
         country:
           type: string
+          example: "US"
           enum:
             - US
             - at_sea # TODO: find TGIS codes for this
@@ -354,10 +448,13 @@ components:
         #   nullable: true
         first:
           type: string
+          example: "Ringo"
         middle:
           type: string
+          example: "Beatle"
         last:
           type: string
+          example: "Starr"
         dob:
           type: string
           format: date
@@ -370,6 +467,7 @@ components:
             - x # TBD - there's currently an ask to add nonbinary values
         placeOfBirth:
           type: string
+          example: "England"
           # TBD There are some contraints for the formatting depending on some characteristics (domestic, foreign, etc. dependent on TDIS)
         ssn:
           $ref: "#/components/schemas/MaskedSsn"
@@ -382,6 +480,7 @@ components:
           description: The address that will be printed on official documents
         alternateNames:
           type: array # TBD maybe ok to just store as delimited string
+          example: []
           items:
             type: string
         hairColor:
@@ -402,6 +501,7 @@ components:
           example: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
         currentStatus:
           type: string
+          example: "in_progress"
           enum:
             - in_progress # don't need this until we save user's place
             - submitted
@@ -429,10 +529,11 @@ components:
       properties:
         nameAsPrinted:
           type: string
+          example: "Ringo Beatle Starr"
         bookNumber:
           type: string
           nullable: true
-        bookIssueDate: 
+        bookIssueDate:
           type: string
           format: date
           nullable: true
@@ -466,6 +567,7 @@ components:
           nullable: true
         isPrimary:
           type: boolean
+          example: true
 
     MaskedPhoneNumber:
       type: string
@@ -482,6 +584,7 @@ components:
       properties:
         isValid:
           type: boolean
+          example: true
         # errors: TBD what PQS returns and if we translate for response
 
     RenewalApplication:
@@ -493,8 +596,9 @@ components:
           example: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
         applicationType:
           type: string
+          example: "renewal"
           enum:
-            - renewal  # TBD other app types, may 
+            - renewal # TBD other app types, may
         applicant:
           $ref: "#/components/schemas/Applicant"
         email:
@@ -508,12 +612,16 @@ components:
         # TBD combine into another table - current thinking is these values can change and could be attached ot this application "snapshot"
         heightFt:
           type: number
+          example: 5
         heightIn:
           type: number
+          example: 11
         occupation:
           type: string
+          example: "Rock Star"
         employerOrSchool:
           type: string
+          example: "St Silas"
         # TBD eSignature data
 
     ValidationErrorDetail:
@@ -537,7 +645,7 @@ components:
             - type: boolean
             - type: array
             - type: object
-          nullable: true
+          example: []
         field:
           description: "Field path, when the error is associated with a specific field."
           example: "applicant.dob"
@@ -550,6 +658,9 @@ components:
       properties:
         isEligible:
           type: boolean
+          example: true
+      example:
+        isEligible: true
         # errors: TBD
 
     AddressValidationResponseData:
@@ -565,7 +676,7 @@ components:
           type: object
           $ref: "#/components/schemas/Address"
           nullable: true
-        # TBD USPS response props 
+        # TBD USPS response props
 
     RenewalApplicationResponseData:
       type: object
@@ -574,7 +685,7 @@ components:
           $ref: "#/components/schemas/RenewalApplication"
         status:
           $ref: "#/components/schemas/ApplicationStatus"
-        
+
     PersistPhotoResponseData:
       type: object
       properties:
@@ -588,6 +699,7 @@ components:
           example: "2024-05-08T12:34:56.789789+00:00"
         storageId:
           type: string
+          example: "abc-123-efg"
           # possibly some S3 key that can be used to generate temporary URL
         status:
           $ref: "#/components/schemas/PhotoQualityStatus"
@@ -605,6 +717,7 @@ components:
           example: "2024-05-08T12:34:56.789789+00:00"
         processor:
           type: string
+          example: "paygov"
           enum:
             - paygov
             # other processors TBD
@@ -615,32 +728,38 @@ components:
       properties:
         photo1:
           type: string # TODO: change to multipart etc.
+          example: "123"
         photo2: # TODO: Doublecheck photo 2/3 aren't necessary for digital
           type: string
-        photo3: 
+          example: "123"
+        photo3:
           type: string
-        
+          example: "123"
+
     EligibilityCheckRequest:
       type: object
       properties:
         dateExpires: # whatever the eligibility criteria are
           type: string
+          example: "2024-05-08"
           format: date
 
     PaymentProcessedRequest:
-        type: object
-        properties:
-          caseId:
-            type: string
-            format: uuid
-          casePersonId:
-            type: string
-            format: uuid
-          eirlIndicator:
-            type: string
+      type: object
+      properties:
+        caseId:
+          type: string
+          format: uuid
+          example: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+        casePersonId:
+          type: string
+          format: uuid
+          example: "6ddcf443-d1bf-4acd-83cc-b1f2d0dc2369"
+        eirlIndicator:
+          type: string
+          example: "eirl"
 
   requestBodies:
-
     AddressValidationRequest:
       content:
         application/json:
@@ -658,7 +777,7 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/PersistPhotoRequest"
-        
+
     EligibilityCheckRequest:
       content:
         application/json:
@@ -670,3 +789,13 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/PaymentProcessedRequest"
+
+  examples:
+    exampleAddress:
+      value:
+        address1: "123 Main St"
+        address2: "Apt 1"
+        city: "Richmond"
+        state: "VA"
+        zip: "00000"
+        country: "US"
