# api/opr_api/controllers/health.py
@@ -4,12 +4,14 @@ from typing import Any
 from sqlalchemy import text
 
 from opr_api.app import db_session
+from opr_api.controllers.response import success_response
 
 
 def health_deep() -> tuple[dict[str, Any], int, dict[str, str]]:
     with db_session() as session:
         session.execute(text("SELECT 1;")).one()
-        return (
+        return success_response(
+            "Response",
             {
                 "status": "up",
                 "timestamp": datetime.datetime.now(datetime.UTC),
@@ -17,19 +19,16 @@ def health_deep() -> tuple[dict[str, Any], int, dict[str, str]]:
                 "apiVersion": "v1",
                 "components": {"db": {"status": "up"}},
             },
-            200,
-            {"Content-Type": "application/json"},
-        )
+        ).to_api_response()
 
 
 def health() -> tuple[dict[str, Any], int, dict[str, str]]:
-    return (
+    return success_response(
+        "Success",
         {
             "status": "up",
             "timestamp": datetime.datetime.now(datetime.UTC),
             "apiName": "opr-api",
             "apiVersion": "v1",
         },
-        200,
-        {"Content-Type": "application/json"},
-    )
+    ).to_api_response()
